--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -14,7 +14,7 @@ description: A new Flutter project.
 version: 1.0.0+1
 
 environment:
-  sdk: ">=2.1.0 <3.0.0"
+  sdk: ">=2.5.2 <3.0.0"
 
 dependencies:
   flutter:
@@ -29,7 +29,7 @@ dependencies:
   introduction_screen: ^1.0.8
   provider: ^4.1.2
   http: ^0.12.1
-  shared_preferences: ^0.5.7+3
+  shared_preferences: ^0.5.7
 
 dev_dependencies:
   flutter_test:
