--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -30,6 +30,8 @@ dependencies:
   provider: ^4.1.2
   http: ^0.12.1
   shared_preferences: ^0.5.7+3
+  auto_animated: ^2.1.0
+  gradient_app_bar: ^0.1.3
 
 dev_dependencies:
   flutter_test:
