--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -30,6 +30,8 @@ dependencies:
   provider: ^4.1.2
   http: ^0.12.1
   shared_preferences: ^0.5.7+3
+  fl_chart: ^0.9.4
+
 
 dev_dependencies:
   flutter_test:
