--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -33,6 +33,8 @@ dependencies:
   auto_animated: ^2.1.0
   gradient_app_bar: ^0.1.3
   pie_chart: ^3.1.1
+  firebase_auth: ^0.16.1
+  cloud_firestore: ^0.13.6
 
 dev_dependencies:
   flutter_test:
