--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -22,19 +22,19 @@ dependencies:
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
-  cupertino_icons: ^0.1.2
-  shimmer: ^1.0.1
-  google_fonts: ^0.3.5
-  font_awesome_flutter: ^8.4.0
-  introduction_screen: ^1.0.8
-  provider: ^4.1.2
-  http: ^0.12.1
-  shared_preferences: ^0.5.7+3
   auto_animated: ^2.1.0
-  gradient_app_bar: ^0.1.3
-  pie_chart: ^3.1.1
-  firebase_auth: ^0.16.1
   cloud_firestore: ^0.13.6
+  cupertino_icons: ^0.1.2
+  firebase_auth: ^0.16.1
+  font_awesome_flutter: ^8.4.0
+  google_fonts: ^0.3.5
+  gradient_app_bar: ^0.1.3
+  http: ^0.12.1
+  # introduction_screen: ^1.0.8
+  pie_chart: ^3.1.1
+  provider: ^4.1.2
+  shared_preferences: ^0.5.7+3
+  shimmer: ^1.0.1
 
 dev_dependencies:
   flutter_test:
