--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -22,7 +22,9 @@ dependencies:
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
+  adobe_xd: ^1.0.0+1
   auto_animated: ^2.1.0
+  bordered_text: ^1.0.0
   cloud_firestore: ^0.13.6
   cupertino_icons: ^0.1.2
   firebase_auth: ^0.16.1
@@ -30,7 +32,6 @@ dependencies:
   google_fonts: ^0.3.5
   gradient_app_bar: ^0.1.3
   http: ^0.12.1
-  # introduction_screen: ^1.0.8
   pie_chart: ^3.1.1
   provider: ^4.1.2
   shared_preferences: ^0.5.7+3
@@ -39,14 +40,23 @@ dependencies:
 dev_dependencies:
   flutter_test:
     sdk: flutter
+  flutter_launcher_icons: "^0.7.3"
+  flutter_native_splash: ^0.1.9
 
+flutter_icons:
+  android: true
+  ios: true
+  image_path: "assets/images/icon.png"
+
+flutter_native_splash:
+  image: assets/images/icon.png
+  color: "ffffff"
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
 
 # The following section is specific to Flutter.
 flutter:
-
   # The following line ensures that the Material Icons font is
   # included with your application, so that you can use the icons in
   # the material Icons class.
@@ -55,7 +65,6 @@ flutter:
   # To add assets to your application, add an assets section, like this:
   assets:
     - assets/images/
-
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware.
@@ -72,12 +81,11 @@ flutter:
     - family: Pacifico
       fonts:
         - asset: assets/fonts/Pacifico-Regular.ttf
-  # #       - asset: fonts/Schyler-Italic.ttf
-  # #         style: italic
+    # #       - asset: fonts/Schyler-Italic.ttf
+    # #         style: italic
     - family: Pacifico
       fonts:
-            - asset: assets/fonts/Pacifico-Regular.ttf
-
+        - asset: assets/fonts/Pacifico-Regular.ttf
   #   - family: SF Pro Display
   #     fonts:
   #       - asset: assets/fonts/SF-Pro-Display-Ultralight.otf
